issue stores text align

--- a/sass/components/_sections.scss
+++ b/sass/components/_sections.scss
@@ -48,6 +48,7 @@
     font-weight: 900;
     margin-top: 1.5rem;
     padding-inline: 1.5rem;
+    text-align: center;
 
     &--link {
       color: #fff;
