--- a/sass/main.css
+++ b/sass/main.css
@@ -229,6 +229,7 @@ body {
   font-weight: 900;
   margin-top: 1.5rem;
   padding-inline: 1.5rem;
+  text-align: center;
 }
 
 .issue__stores--link {
